@@ -1,6 +1,7 @@
 package com.study.spring.config;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -55,18 +56,26 @@ public class CustomSecurityConfig {
 	}
 
 	@Bean
-	public CorsConfigurationSource corsConfigurationSource() {
-		// what goes in the header: authorization, cache-control, content-type
+	public CorsConfigurationSource corsConfigurationSource(){
 		CorsConfiguration configuration = new CorsConfiguration();
-		configuration.setAllowedOrigins(Arrays.asList("*"));
-		configuration.setAllowedMethods(Arrays.asList("HEAD", "GET", "POST", "PUT", "DELETE", "OPTIONS"));
-		configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
-		configuration.setAllowCredentials(true);
+//        configuration.setAllowedOriginPatterns(List.of("http://localhost:3000")); // 로컬호스트 허용
+		configuration.setAllowedOriginPatterns(List.of("*")); // 로컬호스트 허용
+		configuration.addAllowedMethod("*"); // 모든 HTTP 메소드 허용 (GET, POST, 등)
+		configuration.addAllowedHeader("*"); // 모든 헤더 허용
+		configuration.setAllowCredentials(true); // 자격 증명 허용
+
+
+//        configuration.addAllowedOrigin("http://localhost:3000"); // 허용할 도메인
+//        configuration.setAllowedOrigins(Arrays.asList("*"));
+//        configuration.setAllowedMethods(Arrays.asList("HEAD","GET","POST","PUT","DELETE","OPTIONS"));
+//        configuration.setAllowedHeaders(Arrays.asList("Authorization","Cache-Control","Content-Type"));
+		//       configuration.setAllowCredentials(true);
 
 		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
 		source.registerCorsConfiguration("/**", configuration);
 
 		return source;
+
 	}
 
 	@Bean
